[package]
name = "ref-ve"
version = "0.2.3"
authors = ["Marco Sun <sun.dsk1@gmail.com>", "MagicGordon"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "=0.9.0", default-features = false }
near-sdk = "=4.0.0-pre.9"
near-contract-standards = "=4.0.0-pre.9"
near-sys = "=0.1"
once_cell = "=1.8.0"

[dev-dependencies]
near-sdk-sim = "=4.0.0-pre.9"
mock-mft = { path = "../mock-mft" }
mock-ft = { path = "../mock-ft" }
rand = "0.8"